--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "m2de/bugherd-laravel",
-    "description": "Boilerplate repository for creating new Laravel or Javascript/Vue NPM packages",
-    "type": "boilerplate",
+    "description": "A Laravel Helper package to install the [Bugherd](https://www.bugherd.com/) script",
+    "type": "package",
+    "keywords": [
+        "laravel",
+        "bugherd"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -10,8 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "laravel/framework": ">=5.0.0"
+        "php": ">=7.1.3",
+        "laravel/framework": ">=5.6.5"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": ">=3.1"
